syntax = "proto3";
package wal_log;

message LogOffset {
    uint64 next_offset = 1;
}

message HelloRequest {}

message HelloResponse {
    /// Uuid of the current generation
    string generation_id = 1;
    /// First frame_no in the current generation
    uint64 generation_start_index = 2;
    /// Uuid of the database being replicated
    string database_id = 3;
}

message Frame {
    bytes data = 1;
}

message Frames {
    repeated Frame frames = 1;
}

service ReplicationLog {
    rpc Hello(HelloRequest) returns (HelloResponse) {}
    rpc LogEntries(LogOffset) returns (stream Frame) {}
    rpc BatchLogEntries(LogOffset) returns (Frames) {}
    rpc Snapshot(LogOffset) returns (stream Frame) {}
}
